buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'nebula.lint' version '17.0.0'
    id 'eclipse'
    id 'idea'
    id 'checkstyle'
    id 'jacoco'
    id 'org.barfuin.gradle.jacocolog' version '1.0.1'
    id 'org.flywaydb.flyway' version "8.2.3"
}

bootJar {
    archivesBaseName = 'edu.nd.crc.safa'
    archiveVersion = '0.1.0'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JIRA parsing
    implementation 'com.jsoniter:jsoniter:0.9.23'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.13.0.202109080827-r'

    // data parsing
    implementation 'org.javatuples:javatuples:1.2'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'commons-io:commons-io:2.11.0' // TODO: Upgrade contains breaking changes
    implementation 'org.json:json:20210307'

    //database
    implementation 'mysql:mysql-connector-java:8.0.25'
    implementation 'com.google.cloud.sql:mysql-socket-factory-connector-j-8:1.4.0'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'org.hibernate:hibernate-core:5.6.1.Final'
    implementation 'com.zaxxer:HikariCP:5.0.0'

    //Spring
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
    implementation 'org.springframework.data:spring-data-commons:2.6.0'
    implementation 'org.springframework.data:spring-data-jpa:2.5.6' // TODO: Upgrade contains breaking changes
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
    implementation 'org.springframework:spring-websocket:5.3.13'
    implementation 'org.springframework:spring-messaging:5.3.13'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
    implementation 'org.springframework.security:spring-security-messaging:5.6.0'
    implementation 'org.springframework.boot:spring-boot-starter-mail:2.6.1'

    //authentication
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    runtimeOnly 'io.jsonwebtoken:jjwt-orgjson:0.11.2'

    // websockets
    implementation 'org.webjars:sockjs-client:1.5.1'
    implementation 'org.webjars:stomp-websocket:2.3.4'

    // automatic documentation
    annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.12.0'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
    implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.5.12'
    implementation 'org.springdoc:springdoc-openapi-javadoc:1.5.12'

    // testing
    implementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
    testImplementation 'com.h2database:h2:1.4.200'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.springframework.security:spring-security-test:5.6.0'
}

test {
    doFirst {
        systemProperty 'spring.profiles.active', 'test'
    }

    testLogging {
        outputs.upToDateWhen { false }
        showStandardStreams = true
    }
    useJUnitPlatform()
    finalizedBy jacocoTestCoverageVerification
}


/*
 * CI/CD
 */
jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.7
            }
        }
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "edu/**/importer/JIRA.class",
                    "edu/**/importer/Puller.class",
                    "edu/**/builders/AppEntityBuilder.class",
                    "edu/**/importer/DbEntityBuilder.class",
            ])
        }))
    }
}

checkstyle {
    toolVersion = '8.45'
    configFile = file('checkstyle.xml')
}

checkstyleMain {
    source = 'src/main/java'
    ignoreFailures = false
    maxWarnings = 0
}

checkstyleTest {
    source = 'src/test/'
}



